# Amadeus-Cheap-Flight-Finder

./: .gitignore  README.md  pyproject.toml
amadeus_finder/: manage.py  settings.py  urls.py
amadeus_finder/amadeus_finder/: wsgi.py
finder-frontend/: package-lock.json  package.json
finder_backend/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
finder_frontend/: package-lock.json  package.json
finder_frontend/src/: App.js  App.tsx
finder_frontend/src/components/: Flight.tsx  FlightForm.tsx  FlightList.tsx
finder_frontend/src/styles/: Flight.module.css  FlightForm.css  FlightForm.module.css  FlightList.css  FlightList.module.css
