[tool.poetry]
name = "amadeus-cheap-flight-finder"
version = "0.1.0"
description = ""
authors = ["Sriram Iyer <ramiyer1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
amadeus = "^3.1"
djangorestframework = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
